Tank_bp + pawn socket + mesh

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,4 +6,8 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Map/ground.ground
+GameDefaultMap=/Game/Map/ground.ground
+GlobalDefaultGameMode=/Game/Battle_Tank_Game_mode_bp.Battle_Tank_Game_mode_bp_C
 
